package Runner;

option java_package = "com.hopped.running.protobuf";
option java_outer_classname = "RunnerProtos";
option optimize_for = SPEED;

message Pair {
    optional string key = 1;
    optional string value = 2;
}

message ProtoMap {
    repeated Pair item = 1;
}

message Error {
    optional int32 errorCode = 1;
    optional string errorMessage = 2;
}

message RunObject {
    optional string alias = 1;
    optional int32 objectId = 2;
    optional Error error = 3;
}

message User {
    optional string alias = 1;
    optional int32 id = 2;
    optional int32 birthdate = 3;
    optional int32 countLoginFailure = 4;
    optional int32 creationDate = 5;
    optional string distance = 6;
    optional string eMail = 7;
    optional string firstName = 8;
    optional string gender = 9;
    optional int32 height = 10;
    optional string image = 11;
    optional bool isEmailVerified = 12;
    optional bool isPublic = 13;
    optional int32 languageId = 14;
    optional string lastName = 15;
    optional string localeID = 16;
    optional int32 maxHr = 17;
    optional string password = 18;
    optional ProtoMap privacySettings = 19;
    optional string publicPath = 20;
    optional int32 restingHr = 21;
    optional double timezone = 22;
    optional RunObject userRole = 23;
    optional int32 weight = 24;
    optional Error error = 25;
}

message TrackPoint {
    optional double altitudeMeters = 1;
    optional double distanceMeters = 2;
    optional int32 heartRateBpm = 3;
    optional ProtoMap position = 4;
    optional int32 time = 5;
    optional Error error = 6;
}

message Track {
    repeated TrackPoint tpObject = 1;
    optional Error error = 2;
}

message Run {
    optional string alias = 1;
    optional int32 id = 2;
    optional RunObject objectClass = 3;
    optional int32 averageHeartRateBpm = 4;
    optional ProtoMap averagePace = 5;
    optional ProtoMap averageSpeed = 6;
    optional int32 calories = 7;
    optional int32 date = 8;
    optional string description = 9;
    optional double distanceMeters = 10;
    optional bool isVisible = 11;
    optional double maximumSpeed = 12;
    optional int32 maximumHeartRateBpm = 13;
    repeated string notable = 14;
    optional string publicPath = 15;
    repeated string tagList = 16;
    optional int32 totalTimeSeconds = 17;
    optional Track trackObject = 18;
    optional Error error = 19;
}

message RunList {
    repeated Run runs = 1;
    optional Error error = 2;
}

message AuthRequest {
    optional string username = 1;
    optional string password = 2;
}

message AuthResponse {
    optional string sessionId = 1;
    optional User user = 2;
    optional int32 sessionTimeout = 3;
    optional Error error = 4;
}

message RunRequest {
    optional string sessionId = 1;
    repeated int32 runId = 2;
    optional string localeId = 3;
    optional string distance = 4;
}

message RPC {
    required string method = 1;
    required bytes payload = 2;
}

message Ack {
    required bool success = 1;
    optional Error error = 2;
}

